<?xml version="1.0"?>
<package format="2">

	<name>multirotor_keyboard_teleop</name>
	<version>0.0.0</version>
	<description>TODO</description>
	<maintainer email="masa0u0masa1215@gmail.com">Masayoshi Dohi</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>kdl_msgs</depend>

	<depend>dh_ros_tools</depend>
	<depend>dh_std_tools</depend>

	<depend>multirotor_msgs</depend>

</package>
